# rit_imgui_sdl2

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  imgui.ini  vcpkg.json
cmake/: SDL2Windows.cmake  windows-cross-compile-toolchain.cmake
include/: imgui_sdl2.hpp  rit_imgui_sdl2.hpp
src/: imgui_sdl2.cpp  main.cpp  rit_imgui_sdl2.cpp
